--- a/shinobi/_colors.scss
+++ b/shinobi/_colors.scss
@@ -6,25 +6,27 @@
         background-color: $val;
     }
 
-    // Light Variations
-    @for $i from 1 through 9 {
-        .text-#{key}-light-#{$i} {
-            color: mix(white, $val, $i * 10);
+    @if($val != black and $val != white){
+        // Light Variations
+        @for $i from 1 through 9 {
+            .text-#{key}-light-#{$i} {
+                color: mix(white, $val, $i * 10);
+            }
+
+            .bg-#{$key}-light-#{$i} {
+                background-color: mix(white, $val, $i * 10);
+            }
         }
 
-        .bg-#{$key}-light-#{$i} {
-            background-color: mix(white, $val, $i * 10);
-        }
-    }
+        // Dark Variations
+        @for $i from 1 through 9 {
+            .text-#{$key}-dark-#{$i} {
+                color: mix(black, $val, $i * 10);
+            }
 
-    // Dark Variations
-    @for $i from 1 through 9 {
-        .text-#{$key}-dark-#{$i} {
-            color: mix(black, $val, $i * 10);
-        }
-
-        .bg-#{$key}-dark-#{$i} {
-            background-color: mix(black, $val, $i * 10);
+            .bg-#{$key}-dark-#{$i} {
+                background-color: mix(black, $val, $i * 10);
+            }
         }
     }
 }
